--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <div class="description">
                                     <span class="num">01</span>
                                     <h3>Service name</h3>
-                                    <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a>
+                                    <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
 						</div>
@@ -104,7 +104,7 @@
                                 <div class="description">
                                     <span class="num">02</span>
                                     <h3>Service name</h3>
-                                    <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a>
+                                    <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
 						</div>
@@ -114,7 +114,7 @@
                                 <div class="description">
                                     <span class="num">03</span>
                                     <h3>Service name</h3>
-                                    <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a>
+                                    <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
 						</div>
@@ -124,7 +124,7 @@
                                 <div class="description">
                                     <span class="num">04</span>
                                     <h3>Service name</h3>
-                                    <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a>
+                                    <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
 						</div>
@@ -134,7 +134,7 @@
                                 <div class="description">
                                     <span class="num">05</span>
                                     <h3>Service name</h3>
-                                    <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a>
+                                    <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
 						</div>
@@ -144,7 +144,7 @@
                                 <div class="description">
                                     <span class="num">06</span>
                                     <h3>Service name</h3>
-                                    <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a>
+                                    <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
 						</div>
@@ -179,25 +179,25 @@
                     <span><i class="fa-solid fa-fire-burner"></i></span>
                     <h3>Professionnalisme</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
-                    <!-- <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a> -->
+                    <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
                 <div class="default-card" data-aos="zoom-in" data-aos-duration="1500">
                     <span><i class="fa-solid fa-fire-burner"></i></span>
                     <h3>Expérience</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
-                    <!-- <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a> -->
+                    <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
                 <div class="default-card" data-aos="zoom-in" data-aos-duration="1500">
                     <span><i class="fa-solid fa-fire-burner"></i></span>
                     <h3>Qualité</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
-                    <!-- <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a> -->
+                    <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
                 <div class="default-card" data-aos="zoom-in" data-aos-duration="1500">
                     <span><i class="fa-solid fa-fire-burner"></i></span>
                     <h3>Sûreté</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
-                    <!-- <a href="#" class="seemore">Voir plus <sup><i class="fa-solid fa-arrow-up-right-from-square"></i></sup></a> -->
+                    <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
             </div>
         </section>
