--- a/index.html
+++ b/index.html
@@ -293,6 +293,46 @@
                 </div>
             </div>
         </section>
+        <section class="avis" id="testimony">
+            <h2 class="title"><span class="subtitle">Témoignages</span>Que disent nos clients sur nous ?</h2>
+            <div class="blog-slider">
+                <div class="blog-slider__wrp swiper-wrapper">
+                    <div class="blog-slider__item swiper-slide">
+                        <div class="blog-slider__img">
+                        <img src="./images/Avis/1.jpg" alt="testimonial">
+                        </div>
+                        <div class="blog-slider__content">
+                        <span class="blog-slider__code">Mami Fall</span>
+                        <div class="blog-slider__title">CEO Takku</div>
+                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
+                        </div>
+                    </div>
+                    <div class="blog-slider__item swiper-slide">
+                        <div class="blog-slider__img">
+                        <img src="./images/Avis/2.jpg" alt="testimonial">
+                        </div>
+                        <div class="blog-slider__content">
+                        <span class="blog-slider__code">Cheikh Kanté</span>
+                        <div class="blog-slider__title">DG Woyofal</div>
+                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
+                        </div>
+                    </div>
+                    
+                    <div class="blog-slider__item swiper-slide">
+                        <div class="blog-slider__img">
+                        <img src="./images/Avis/3.jpg" alt="testimonial">
+                        </div>
+                        <div class="blog-slider__content">
+                        <span class="blog-slider__code">Moussa Dème</span>
+                        <div class="blog-slider__title">PDG Sonatel</div>
+                        <div class="blog-slider__text"><span>&#8223;</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
+                        </div>
+                    </div>
+                    
+                    </div>
+                <div class="blog-slider__pagination"></div>
+            </div>
+        </section>
         <section class="tarifs">
             <h2 class="title"><span class="subtitle center">Nos tarifs</span>Des événements de qualité, des forfaits abordables</h2>
             <div class="container">
@@ -401,7 +441,7 @@
                 <span class="ico"><i class="fa-solid fa-envelope"></i></span>
                 <div>
                     <h3>Newsletter</h3>
-                    <p>Inscrivez vous à notre Newsletter pour recevoir toutes nos actualités</p>
+                    <p>Inscrivez vous pour recevoir toutes nos actualités</p>
                     <form action="#">
                         <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
                     </form>
