--- a/index.html
+++ b/index.html
@@ -12,7 +12,34 @@
     <link rel="stylesheet" href="./public/style.css">
 </head>
 <body>
+    <div class="preloader">
+        <div class="txt-loading">
+			<span data-text-preloader="L" class="letters-loading"> L</span>
+			<span data-text-preloader="A" class="letters-loading"> A</span>
+			<span data-text-preloader="W" class="letters-loading"> W</span>
+			<span data-text-preloader=" " class="letters-loading"> </span>
+			<span data-text-preloader="C" class="letters-loading"> C</span>
+			<span data-text-preloader="O" class="letters-loading"> O</span>
+			<span data-text-preloader="R" class="letters-loading"> R</span>
+			<span data-text-preloader="P" class="letters-loading"> P</span>
+			<span data-text-preloader="." class="letters-loading"> .</span>
+		</div>
+    </div>
     <header>
+        <div class="infos">
+            <div class="item" data-aos="fade-up" data-aos-duration="1500">
+                <span class="ico"><i class="fa-solid fa-location-dot"></i></span>
+                <p>20 Bd des moutons, 4429 Katangua</p>
+            </div>
+            <div class="item" data-aos="fade-up" data-aos-duration="1500">
+                <span class="ico"><i class="fa-solid fa-phone"></i></span>
+                <a href="tel:+92 92 82 13 33">+92 92 82 13 33</a>
+            </div>
+            <div class="item" data-aos="fade-up" data-aos-duration="1500">
+                <span class="ico"><i class="fa-solid fa-envelope"></i></span>
+                <a href="mailto:contact@gmail.com">contact@gmail.com</a>
+            </div>
+        </div>
         <div class="navbar flex">
             <a href="#" class="logo"><b>Law</b>Corp.</a>
             <nav>
@@ -27,7 +54,7 @@
             </nav>
         </div>
         <div class="banner grid">
-            <div class="slogan" data-aos="zoom-in" data-aos-duration="1500">
+            <div class="slogan" data-aos="fade-up" data-aos-duration="1500">
                 <h1><strong>Les clients</strong> d'abord.<br><strong>La qualité</strong> avant tout.</h1>
                 <p>Nos avocats spécialisés en divorce et en droit de la famille offrent des conseils juridiques de qualité à des milliers de familles dans le comté de Monmouth depuis plus de 60 ans d'expérience combinée.</p>
                 <div class="btn-rs">
@@ -50,18 +77,18 @@
         <section class="partners bg-light">
             <!-- <h2 class="title" data-aos="zoom-out" data-aos-duration="1500"><span class="subtitle">Nos meilleurs clients</span>Nous avons permis à de grandes entreprises d'économiser de l'argent</h2> -->
             <div class="container">
-                <div class="img" data-aos="zoom-in" data-aos-duration="1500"><img src="./images/partners/01.png" alt="partner"></div>
-                <div class="img" data-aos="zoom-in" data-aos-duration="1500"><img src="./images/partners/02.png" alt="partner"></div>
-                <div class="img" data-aos="zoom-in" data-aos-duration="1500"><img src="./images/partners/03.png" alt="partner"></div>
-                <div class="img" data-aos="zoom-in" data-aos-duration="1500"><img src="./images/partners/04.png" alt="partner"></div>
-                <div class="img" data-aos="zoom-in" data-aos-duration="1500"><img src="./images/partners/05.png" alt="partner"></div>
+                <div class="img" data-aos="fade-up" data-aos-duration="1500"><img src="./images/partners/01.png" alt="partner"></div>
+                <div class="img" data-aos="fade-up" data-aos-duration="1500"><img src="./images/partners/02.png" alt="partner"></div>
+                <div class="img" data-aos="fade-up" data-aos-duration="1500"><img src="./images/partners/03.png" alt="partner"></div>
+                <div class="img" data-aos="fade-up" data-aos-duration="1500"><img src="./images/partners/04.png" alt="partner"></div>
+                <div class="img" data-aos="fade-up" data-aos-duration="1500"><img src="./images/partners/05.png" alt="partner"></div>
             </div>
         </section>
         <section class="about grid">
-            <div class="img-bloc flex" data-aos="zoom-in" data-aos-duration="1500">
+            <div class="img-bloc flex" data-aos="fade-up" data-aos-duration="1500">
                 <img src="./images/pic-4.jpg" alt="team">
             </div>
-            <div class="text-bloc flex" data-aos="zoom-in" data-aos-duration="1500">
+            <div class="text-bloc flex" data-aos="fade-up" data-aos-duration="1500">
                 <h2 data-aos="zoom-out" data-aos-duration="1500" class="title"><span class="subtitle">Qui sommes-nous ?</span>Cabinet d'avocats expérimenté</h2>
                <div class="text-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique fugit expedita aspernatur dignissimos iusto quam minima adipisci dolore pariatur explicabo, possimus ab voluptates! Rerum saepe quibusdam, nemo delectus debitis enim.</p>
@@ -166,10 +193,10 @@
             </div>
             </div>
             <div class="container">
-                <div class="item-count" data-aos="zoom-in" data-aos-duration="1500"><span>125m</span><span>Argent économisé</span></div>
-                <div class="item-count" data-aos="zoom-in" data-aos-duration="1500"><span>+750</span><span>Cas d'étude</span></div>
-                <div class="item-count" data-aos="zoom-in" data-aos-duration="1500"><span>38m</span><span>Experts</span></div>
-                <div class="item-count" data-aos="zoom-in" data-aos-duration="1500"><span>47K</span><span>Cas réussis</span></div>
+                <div class="item-count" data-aos="fade-up" data-aos-duration="1500"><span>125m</span><span>Argent économisé</span></div>
+                <div class="item-count" data-aos="fade-up" data-aos-duration="1500"><span>+750</span><span>Cas d'étude</span></div>
+                <div class="item-count" data-aos="fade-up" data-aos-duration="1500"><span>38m</span><span>Experts</span></div>
+                <div class="item-count" data-aos="fade-up" data-aos-duration="1500"><span>47K</span><span>Cas réussis</span></div>
             </div>
         </section>
         <section class="cases">
@@ -226,13 +253,13 @@
         </section>
         <section class="accordion">
             <div class="container grid">
-                <div class="img-bloc flex" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="img-bloc flex" data-aos="fade-up" data-aos-duration="1500">
                     <img src="./images/faq.jpg" alt="faq">
                 </div>
                 <div class="accordion">
-                   <h2 class="title center"><span class="subtitle">Faq</span></h2>
+                   <h2 class="title center"><span class="subtitle">Faq</span>Questions fréquentes</h2>
                   <div class="accordion-item">
-                    <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Why is the moon sometimes out during the day?</span><span class="icon" aria-hidden="true"></span></button>
+                    <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Why is the moon sometimes out during the day?</span><span class="icon" aria-hidden="false"></span></button>
                     <div class="accordion-content">
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
                     </div>
@@ -261,31 +288,43 @@
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
                     </div>
                   </div>
+                  <div class="accordion-item">
+                    <button id="accordion-button-6" aria-expanded="false"><span class="accordion-title">How do airplanes stay up?</span><span class="icon" aria-hidden="true"></span></button>
+                    <div class="accordion-content">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <button id="accordion-button-7" aria-expanded="false"><span class="accordion-title">How do airplanes stay up?</span><span class="icon" aria-hidden="true"></span></button>
+                    <div class="accordion-content">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+                    </div>
+                  </div>
                 </div>
             </div>
         </section>
         <section class="atout">
             <h2 class="title center"><span class="subtitle center">Pourquoi nous choisir ?</span>Vous couvrir avec qualité et fiabilité</h2>
             <div class="container">
-                <div class="default-card" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="default-card" data-aos="fade-up" data-aos-duration="1500">
                     <span><img src="./images/stats/i1.png" alt="" /></span>
                     <h3>Professionnalisme</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
                     <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
-                <div class="default-card" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="default-card" data-aos="fade-up" data-aos-duration="1500">
                     <span><img src="./images/stats/i2.png" alt="" /></span>
                     <h3>Expérience</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
                     <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
-                <div class="default-card" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="default-card" data-aos="fade-up" data-aos-duration="1500">
                     <span><img src="./images/stats/i3.png" alt="" /></span>
                     <h3>Qualité</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
                     <!-- <a href="#" class="seemore">Voir plus <sup>+</sup></a> -->
                 </div>
-                <div class="default-card" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="default-card" data-aos="fade-up" data-aos-duration="1500">
                     <span><img src="./images/stats/i4.png" alt="" /></span>
                     <h3>Sûreté</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto laboriosam quasi amet praesentium. Aperiam, quos?</p>
@@ -380,7 +419,7 @@
         <section class="news">
             <h2 class="title"><span class="subtitle center">Actualités</span>Votre référence pour des lectures captivantes</h2>
             <div class="container">
-                <div class="item-new" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="item-new" data-aos="fade-up" data-aos-duration="1500">
                     <div class="img-new">
                         <img src="./images/pic-1.jpg" alt="">
                     </div>
@@ -391,7 +430,7 @@
                         <a href="#" class="seemore">Lire +</a>
                     </div>
                 </div>
-                <div class="item-new" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="item-new" data-aos="fade-up" data-aos-duration="1500">
                     <div class="img-new">
                         <img src="./images/pic-2.jpg" alt="">
                     </div>
@@ -402,7 +441,7 @@
                         <a href="#" class="seemore">Lire +</a>
                     </div>
                 </div>
-                <div class="item-new" data-aos="zoom-in" data-aos-duration="1500">
+                <div class="item-new" data-aos="fade-up" data-aos-duration="1500">
                     <div class="img-new">
                         <img src="./images/pic-3.jpg" alt="">
                     </div>
@@ -414,44 +453,27 @@
                     </div>
                 </div>
             </div>
+            <div class="newsletter" data-aos="fade-up" data-aos-duration="1500">
+                <span class="ico"><i class="fa-solid fa-envelope"></i></span>
+                <div>
+                    <h3>Newsletter</h3>
+                    <p>Inscrivez vous pour recevoir toutes nos actualités</p>
+                </div>
+                <form action="#">
+                    <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
+                </form>
+            </div>
         </section>
-        <section class="map">
+        <section class="map" data-aos="fade-up" data-aos-duration="1500">
             <h2 class="title"><span class="subtitle">Où nous trouver ?</span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit, nemo</h2>
             <div class="zone">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26412.902356809667!2d-118.58599265133023!3d34.15624710717531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c299205af0374b%3A0x5f6b5f8cbe2e8f9a!2sTarzana%2C%20Los%20Angeles%2C%20Californie%2C%20%C3%89tats-Unis!5e0!3m2!1sfr!2sma!4v1733498424788!5m2!1sfr!2sma" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
-        <section class="infos">
-            <div class="item">
-                <span class="ico"><i class="fa-solid fa-location-dot"></i></span>
-                <div>
-                    <h3>Adresse</h3>
-                    <p>20 Bd des moutons, <br>4429 Katangua</p>
-                </div>
-            </div>
-            <div class="item">
-                <span class="ico"><i class="fa-solid fa-phone"></i></span>
-                <div>
-                    <h3>Contact</h3>
-                    <a href="tel:+92 92 82 13 33">+92 92 82 13 33</a> 
-                    <a href="mailto:contact@gmail.com">contact@gmail.com</a>
-                </div>
-            </div>
-            <div class="item">
-                <span class="ico"><i class="fa-solid fa-envelope"></i></span>
-                <div>
-                    <h3>Newsletter</h3>
-                    <p>Inscrivez vous pour recevoir toutes nos actualités</p>
-                    <form action="#">
-                        <input type="mail" name="mail" id="mail" placeholder="Veuillez saisir votre mail"><input type="submit" value="Ok">
-                    </form>
-                </div>
-            </div>
-        </section>
     </main>
     <footer>
         <section class="footer-1">
-            <div class="bloc" data-aos="zoom-in" data-aos-duration="1500">
+            <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
                 <a href="#" class="logo"><b>Law</b>Corp.</a>
                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, iusto.</span>
                 <div class="btn-rs">
@@ -460,7 +482,7 @@
                     <span><i class="fa-brands fa-instagram"></i></span>
                 </div>
             </div>
-            <div class="bloc" data-aos="zoom-in" data-aos-duration="1500">
+            <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
                 <h3>Accés rapide</h3>
                 <ul>
                     <li><a href="#" class="active">Accueil</a></li>
@@ -469,7 +491,7 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
-            <div class="bloc" data-aos="zoom-in" data-aos-duration="1500">
+            <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
                 <h3>Liens importants</h3>
                 <ul>
                     <li><a href="#">Actualités</a></li>
@@ -477,13 +499,13 @@
                     <li><a href="#">Mentions légales</a></li>
                 </ul>
             </div>
-            <div class="bloc" data-aos="zoom-in" data-aos-duration="1500">
+            <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
                 <h3>Disponibilité</h3>
                 <span>Du lundi au Samedi</span>
                 <span>De 10h à 20h</span>
             </div>
         </section>
-        <section class="footer-2" data-aos="zoom-in" data-aos-duration="1500">
+        <section class="footer-2" data-aos="fade-up" data-aos-duration="1500">
             <span>@Copyright 2025 - Tous droits réservés</span>
             <span>Made by MMD with <i class="fa-solid fa-mug-hot"></i></span>
         </section>
