--- a/index.html
+++ b/index.html
@@ -186,11 +186,6 @@
         <section class="stats flex bg-light">
             <div class="text-left">
                 <h2 class="title"><span class="subtitle">Nos statistiques</span>Nos réalisations au cours des 10 dernières années</h2>
-               <div class="text-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit alias consectetur facere? Dignissimos error inventore ullam earum quibusdam omnis voluptatem sequi architecto praesentium quae, vel quia, odio porro deserunt molestiae.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit alias consectetur facere? Dignissimos error inventore ullam earum quibusdam omnis voluptatem sequi architecto praesentium quae, vel quia, odio porro deserunt molestiae.</p>
-                <a href="#" class="btn">Prendre RDV</a>
-            </div>
             </div>
             <div class="container">
                 <div class="item-count" data-aos="fade-up" data-aos-duration="1500"><span>125m</span><span>Argent économisé</span></div>
@@ -474,15 +469,6 @@
     <footer>
         <section class="footer-1">
             <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
-                <a href="#" class="logo"><b>Law</b>Corp.</a>
-                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, iusto.</span>
-                <div class="btn-rs">
-                    <span><i class="fa-brands fa-facebook-f"></i></span>
-                    <span><i class="fa-brands fa-twitter"></i></span>
-                    <span><i class="fa-brands fa-instagram"></i></span>
-                </div>
-            </div>
-            <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
                 <h3>Accés rapide</h3>
                 <ul>
                     <li><a href="#" class="active">Accueil</a></li>
@@ -503,6 +489,16 @@
                 <h3>Disponibilité</h3>
                 <span>Du lundi au Samedi</span>
                 <span>De 10h à 20h</span>
+                <span>Ferme le Dimanche</span>
+            </div>
+            <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
+                <a href="#" class="logo"><b>Law</b>Corp.</a>
+                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, iusto.</span>
+                <div class="btn-rs">
+                    <span><i class="fa-brands fa-facebook-f"></i></span>
+                    <span><i class="fa-brands fa-twitter"></i></span>
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                </div>
             </div>
         </section>
         <section class="footer-2" data-aos="fade-up" data-aos-duration="1500">
