--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<span data-text-preloader="." class="letters-loading"> .</span>
 		</div>
     </div>
-    <header>
+    <header class="page-interne">
         <div class="infos">
             <div class="item" data-aos="fade-up" data-aos-duration="1500">
                 <span class="ico"><i class="fa-solid fa-location-dot"></i></span>
