begin page interne

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <!-- Main Style -->
     <link rel="stylesheet" href="./public/style.css">
 </head>
-<body>
+<body class="body-index">
     <div class="preloader">
-        <div class="txt-loading">
+        <img src="./images/loader.gif" alt="loader"/>
+        <!-- <div class="txt-loading">
 			<span data-text-preloader="L" class="letters-loading"> L</span>
 			<span data-text-preloader="A" class="letters-loading"> A</span>
 			<span data-text-preloader="W" class="letters-loading"> W</span>
@@ -23,7 +24,7 @@
 			<span data-text-preloader="R" class="letters-loading"> R</span>
 			<span data-text-preloader="P" class="letters-loading"> P</span>
 			<span data-text-preloader="." class="letters-loading"> .</span>
-		</div>
+		</div> -->
     </div>
     <header class="page-interne">
         <div class="infos">
@@ -48,8 +49,8 @@
                     <span class="closeBtn"><i class="fa-solid fa-circle-xmark"></i></span>
                     <li><a href="#" class="active">Accueil</a></li>
                     <li><a href="#">Actualités</a></li>
-                    <li><a href="#">Honoraires</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./servicelist.html">Nos services</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -63,8 +64,8 @@
                     <span><i class="fa-brands fa-instagram"></i></span>
                 </div>
                 <div class="btn-group">
-                    <a href="#" class="btn">Contactez-nous</a>
-                    <span><strong>7 900</strong>cas réussis</span>
+                    <a href="./contact.html" class="btn">Contactez-nous</a>
+                    <span><strong>7900</strong> cas réussis</span>
                 </div>
             </div>
             <div class="img-banner">
@@ -120,7 +121,7 @@
                                 <div class="img"><img src="./images/services/service-1.jpg" alt=""/></div>
                                 <div class="description">
                                     <span class="num">01</span>
-                                    <h3>Service name</h3>
+                                    <h3>Consultation juridique</h3>
                                     <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
@@ -130,7 +131,7 @@
                                 <div class="img"><img src="./images/services/service-2.jpg" alt=""/></div>
                                 <div class="description">
                                     <span class="num">02</span>
-                                    <h3>Service name</h3>
+                                    <h3>Représentation en justice</h3>
                                     <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
@@ -140,7 +141,7 @@
                                 <div class="img"><img src="./images/services/service-3.jpg" alt=""/></div>
                                 <div class="description">
                                     <span class="num">03</span>
-                                    <h3>Service name</h3>
+                                    <h3>Rédaction de contrats</h3>
                                     <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
@@ -150,7 +151,7 @@
                                 <div class="img"><img src="./images/services/service-4.jpg" alt=""/></div>
                                 <div class="description">
                                     <span class="num">04</span>
-                                    <h3>Service name</h3>
+                                    <h3>Conseil en entreprise</h3>
                                     <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
@@ -160,7 +161,7 @@
                                 <div class="img"><img src="./images/services/service-5.jpg" alt=""/></div>
                                 <div class="description">
                                     <span class="num">05</span>
-                                    <h3>Service name</h3>
+                                    <h3>Gestion des litiges</h3>
                                     <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
@@ -170,7 +171,7 @@
                                 <div class="img"><img src="./images/services/service-6.jpg" alt=""/></div>
                                 <div class="description">
                                     <span class="num">06</span>
-                                    <h3>Service name</h3>
+                                    <h3>Droit de la famille</h3>
                                     <a href="#" class="seemore">Voir plus <sup>+</sup></a>
                                 </div>
                             </div>
@@ -473,16 +474,16 @@
                 <ul>
                     <li><a href="#" class="active">Accueil</a></li>
                     <li><a href="#">Actualités</a></li>
-                    <li><a href="#">Honoraires</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./servicelist.html">Nos services</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
                 <h3>Liens importants</h3>
                 <ul>
-                    <li><a href="#">Actualités</a></li>
                     <li><a href="#">Faq</a></li>
                     <li><a href="#">Mentions légales</a></li>
+                    <li><a href="#">Politiques de confidentialité</a></li>
                 </ul>
             </div>
             <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
@@ -501,7 +502,7 @@
                 </div>
             </div>
         </section>
-        <section class="footer-2" data-aos="fade-up" data-aos-duration="1500">
+        <section class="footer-2">
             <span>@Copyright 2025 - Tous droits réservés</span>
             <span>Made by MMD with <i class="fa-solid fa-mug-hot"></i></span>
         </section>
