--- a/servicelist.html
+++ b/servicelist.html
@@ -11,7 +11,7 @@
     <!-- Main Style -->
     <link rel="stylesheet" href="./public/style.css">
 </head>
-<body class="body-contact">
+<body class="body-service">
     <div class="preloader">
         <img src="./images/loader.gif" alt="loader"/>
         <!-- <div class="txt-loading">
@@ -49,19 +49,66 @@
                     <span class="closeBtn"><i class="fa-solid fa-circle-xmark"></i></span>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="#">Actualités</a></li>
-                    <li><a href="./servicelist.html">Nos services</a></li>
-                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="./servicelist.html" class="active">Nos services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
         <div class="banner interne">
             <div class="slogan" data-aos="fade-up" data-aos-duration="1500">
-                <h1><strong>Contactez</strong> notre cabinet<br><strong>24h/24</strong> 7j/7</h1>
-                <p>N'hésitez pas à nous contacter pour toute demande d'information.</p>
+                <h1>Nos <strong>domaines</strong> d'intervention<br>Des services de <strong>hautes</strong> qualités</h1>
+                <p>Nous vous assistons dans toutes vos situations judiciaires</p>
+                <div class="btn-group">
+                    <a href="./contact.html" class="btn">Contactez-nous</a>
+                </div>
             </div>
         </div>
     </header>
     <main>
+        <section class="servicelist">
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="img-service"><img src="./images/services/service-1.jpg" alt="Consultation juridique"></div>
+                <div class="description">
+                    <h2>Consultation juridique</h2>
+                    <p>Nous offrons des consultations juridiques pour vous aider à comprendre vos droits et obligations.</p>
+                </div>
+            </div>
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="img-service"><img src="./images/services/service-2.jpg" alt="Représentation en justice"></div>
+                <div class="description">
+                    <h2>Représentation en justice</h2>
+                    <p>Nos avocats expérimentés vous représentent devant les tribunaux pour défendre vos intérêts.</p>
+                </div>
+            </div>
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="img-service"><img src="./images/services/service-3.jpg" alt="Rédaction de contrats"></div>
+                <div class="description">
+                    <h2>Rédaction de contrats</h2>
+                    <p>Nous rédigeons et révisons des contrats pour garantir qu'ils protègent vos droits.</p>
+                </div>
+            </div>
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="img-service"><img src="./images/services/service-4.jpg" alt="Conseil en entreprise"></div>
+                <div class="description">
+                    <h2>Conseil en entreprise</h2>
+                    <p>Nous fournissons des conseils juridiques aux entreprises pour les aider à naviguer dans les réglementations.</p>
+                </div>
+            </div>
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="img-service"><img src="./images/services/service-5.jpg" alt="Gestion des litiges"></div>
+                <div class="description">
+                    <h2>Gestion des litiges</h2>
+                    <p>Nous vous assistons dans la gestion et la résolution des litiges de manière efficace.</p>
+                </div>
+            </div>
+            <div class="service-item" data-aos="fade-up" data-aos-duration="1500">
+                <div class="img-service"><img src="./images/services/service-6.jpg" alt="Droit de la famille"></div>
+                <div class="description">
+                    <h2>Droit de la famille</h2>
+                    <p>Nous vous aidons dans les affaires de divorce, de garde d'enfants et d'autres questions familiales.</p>
+                </div>
+            </div>
+        </section>
         <section class="contact">
             <div class="container">
                 <div class="form" data-aos="fade-up" data-aos-duration="1500">
@@ -83,34 +130,7 @@
                             <button type="submit" class="btn">Envoyer</button>
                         </div>
                     </form>
-                </div>
-                <div class="infos" data-aos="fade-up" data-aos-duration="1500">
-                    <h2>Informations</h2>
-                    <div class="item">
-                        <span class="ico"><i class="fa-solid fa-location-dot"></i></span>
-                        <p>20 Bd des moutons, 4429 Katangua</p>
-                    </div>
-                    <div class="item">
-                        <span class="ico"><i class="fa-solid fa-phone"></i></span>
-                        <a href="tel:+92 92 82 13 33">+92 92 82 13 33</a>
-                    </div>
-                    <div class="item">
-                        <span class="ico"><i class="fa-solid fa-envelope"></i></span>
-                        <a href="mailto:contact@lawcorp.com">contact@lawcorp.com</a>
-                    </div>
-                    <div class="item">
-                        <span class="ico"><i class="fa-solid fa-clock"></i></span>
-                        <p>Du lundi au Samedi de 10h à 20h</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="map">
-            <div class="container">
-                <div class="map" data-aos="fade-up" data-aos-duration="1500">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.073013073073!2d3.876715314266073!3d43.61076972238347!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5f6f4b3b3b1e1%3A0x1
-                    1b3b1e1b3b1b3b1!2sMontpellier!5e0!3m2!1sfr!2sfr!4v1633663666827!5m2!1sfr!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
+                </div>   
             </div>
         </section>
     </main>
@@ -121,8 +141,8 @@
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="#">Actualités</a></li>
-                    <li><a href="./servicelist.html">Nos services</a></li>
-                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="./servicelist.html" class="active">Nos services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="bloc" data-aos="fade-up" data-aos-duration="1500">
